--- a/work/nabian.html
+++ b/work/nabian.html
@@ -43,13 +43,13 @@
   <br class="listBreak">
   Type: team project
   <br class="listBreak">
-  Copyright: Nora Zhao, Xueying Brand Management
+  Copyright: Nora Zhao, Xueying Brand Management Co., Ltd.
   <br class="listBreak">
   Role: designer
   <br class="dividerLine">
-  The wonderful life is not linear, it is composed of countless beautiful moments in specific time and space.
+  The wonderful life is not linear, it is composed of countless beautiful moments in specific time and space. 
   <br>
-  "Nabian (translation: there)" is a word full of temporal and spatial feelings, in "Nabian", there, at that time, that kind of beautiful thing happened, which constitutes a complete story about a wonderful life. Imagine, with Shanghai as the origin, unfold the imaginative time and space. "Nabian" opens a coordinate axis, which can locate every beautiful moment. Together, they tell a complete story.
+  "Nabian (translation: there)" is a word full of temporal and spatial feelings. In "Nabian", there, at that time, that kind of beautiful things happened, which constitutes a complete story of a wonderful life. Imagine: with Shanghai as the origin, unfolding the imaginative time and space. "Nabian" opens a coordinate axis, which can locate every beautiful moment.
 </p>
 <p class="zh indent bodyText">
   客户：那边
@@ -68,7 +68,7 @@
   <br class="dividerLine">
   美好生活不是线性的，它是由无数个具体时空的美好瞬间所组成的。
   <br>
-  “那边”是一个充满时空感受的词，在“那边”，那里，那时，发生了那样的美好，这构成了有关美好生活的完整故事。想象一下，以上海为原点，unfold充满想象力的时空，“那边”张开了一个坐标轴，可以定位点点滴滴的美好瞬间，让每一个美好瞬间都能够述说完整的故事。
+  “那边”是一个充满时空感受的词，在“那边”，那里，那时，发生了那样的美好，这构成了有关美好生活的完整故事。想象一下，以上海为原点，展开充满想象力的时空，“那边”张开了一个坐标轴，可以定位点点滴滴的美好瞬间，让每一个美好瞬间都能够述说完整的故事。
 </p>
 
 <div class="grid1">
