--- a/work/books-and-booklets.html
+++ b/work/books-and-booklets.html
@@ -125,6 +125,10 @@
   时间：2020年
   <br class="listBreak">
   类型：团队项目
+  <br class="listBreak">
+  版权所有：Design by Structure
+  <br class="listBreak">
+  角色：设计师
   <br class="dividerLine">
   这是为一家数字化转型公司（Ascent）设计的电子刊物，作为其品牌识别的一部分。
   <br>
