--- a/about-and-contact.html
+++ b/about-and-contact.html
@@ -32,30 +32,121 @@
 </div>
 </main>
 
+<h2 class="en indent">About Me</h2>
 <p class="en indent bodyText">
   Hello! I'm Nora, an artist and designer. This website shows a selection of my past projects. My practice can be found across the areas of generative art, brand identity and conventional graphic design. I'm interested in the matter of image generation through creative coding.
   <br>
-  I have a bachelor's degree in Business Administration (2016) from Communication University of China, a postgraduate diploma in Design for Visual Communications (merit, 2018) and a master's degree in Graphic Media Design (merit, 2020) from London College of Communication, University of the Arts London (UAL). I'm currently working as a freelancer.
+  I have a bachelor's degree in Business Administration (2016) from Communication University of China, a postgraduate diploma in Design for Visual Communications (merit, 2018) and a master's degree in Graphic Media Design (merit, 2020) from London College of Communication, University of the Arts London (UAL). 
   <br>
-  Full portfolio available upon request. If you are interested, please send me an email of inquiry about any possible commission or collaboration.
+  I'm currently working as a freelancer.
+</p>
+
+<h2 class="zh indent">简介</h2>
+<p class="zh indent bodyText">
+  Hello！我叫赵子娴（Nora），是一名艺术家 / 设计师。网站上选取并展示了我过去完成的部分项目，涉及领域包括生成艺术（generative art）、品牌识别（brand identity）以及平面设计（graphic design）。
   <br>
-  Email: hi@norazhao.com
+  我持有中国传媒大学的工商管理本科学位（2016）、伦敦艺术大学（UAL）传媒学院的视觉传达设计研究生文凭（优秀，2018）和平面媒体设计硕士学位（优秀，2020）。
+</p>
+
+<h2 class="en indent">Past Awards</h2>
+<p class="en indent bodyText">
+  <a href="/work/synsol.html">Synsol</a>: 
+  <br class="listBreak">
+  D&AD Awards Pencil Winner (Health & Wellbeing Sector, 2022)
+  <br class="listBreak">
+  (team project, designer)
+  <br class="listBreak">
+
+  <a href="/work/glitch-room.html">Glitch Room</a>:
+  <br class="listBreak">
+  Award 360° - 100 Design of the Year (Creative Multimedia Design of the Year, 2021)
+  <br class="listBreak">
+  (independent project, designer/coder/writer)
+  <br class="listBreak">
+
+  <a href="/work/omdia.html">Omdia (Informa Tech)</a>: 
+  <br class="listBreak">
+  Transform Awards (Best Corporate Re-Brand following a Merger or Acquisition, 2021)
+  <br class="listBreak">
+  (team project, designer)
+  <br class="listBreak">
+</p>
+
+<h2 class="zh indent">奖项</h2>
+<p class="zh indent bodyText">
+  <a href="/work/synsol.html">Synsol</a>：
+  <br class="listBreak">
+  D&AD木铅笔奖（伦敦｜2022年）（团队项目｜设计师）
+  <br class="listBreak">
+
+  <a href="/work/glitch-room.html">故障房间</a>：
+  <br class="listBreak">
+  Award360°年度设计100（年度多媒体创意设计｜2021年） （个人项目）
+  <br class="listBreak">
+
+  <a href="/work/omdia.html">Omdia (Informa Tech)</a>：
+  <br class="listBreak">
+  TRANSFORM AWARDS 金奖 （伦敦｜2021年）（团队项目｜设计师）
+</p>
+
+<h2 class="en indent">Exhibitions</h2>
+<p class="en indent bodyText">
+  <a href="/work/glitch-room.html">Glitch Room</a>: 
+  <br class="listBreak">
+  Facet - Award360° 2021 Exhibition, 100 Designs of the Year
+  <br class="listBreak">
+  2022 | Pidan by the River Gallery, Shanghai, China
+  <br class="listBreak">
+
+  <a href="/work/glitch-room.html">Glitch Room</a>:
+  <br class="listBreak">
+  LCC Postgraduate Shows
+  <br class="listBreak">
+  2019 | London College of Communication, Univerisity of the Arts London, London, UK
+  <br class="listBreak">
+
+  <a href="/work/chinese-grid.html">Chinese Grid</a>:
+  <br class="listBreak">
+  LCC Postgraduate Shows
+  <br class="listBreak">
+  2018 | London College of Communication, Univerisity of the Arts London, London, UK
+</p>
+
+<h2 class="zh indent">展览</h2>
+<p class="zh indent bodyText">
+  <a href="/work/glitch-room.html">故障房间</a>：
+  <br class="listBreak">
+  截·面 — Award360°2021年度设计100展（上海｜Pidan在河边Gallery)
+  <br class="listBreak">
+  <a href="/work/glitch-room.html">故障房间</a>：
+  <br class="listBreak">
+  伦敦传媒学院2019年研究生毕业展（伦敦｜伦敦艺术大学）
+  <br class="listBreak">
+  <a href="/work/chinese-grid.html">中文字形网格</a>：
+  <br class="listBreak">
+  伦敦传媒学院2018年研究生毕业展（伦敦｜伦敦艺术大学）
+</p>
+
+<h2 class="en indent">Contact Info</h2>
+<p class="en indent bodyText">
+  Full portfolio available upon request.
+  <br>
+  If you are interested, please send me an email of inquiry about any possible commission or collaboration.
+  <br>
+  Email: norazhaodesign@gmail.com
   <br style="margin-bottom: 0;">
   Instagram: <a href="https://www.instagram.com/norazhaodesign/" target="_blank">norazhaodesign</a>
   ·
   Linkedin: <a href="https://www.linkedin.com/in/norazhaodesign/" target="_blank">norazhaodesign</a>
 </p>
 
+<h2 class="zh indent">联系方式</h2>
 <p class="zh indent bodyText">
-  Hello！我叫赵子娴（Nora），是一名艺术家 / 设计师。网站上选取并展示了我过去完成的部分项目，涉及领域包括生成艺术（generative art）、品牌识别（brand identity）以及平面设计（graphic design）。
-  <br>
-  我持有中国传媒大学的工商管理本科学位（2016）、伦敦艺术大学（UAL）传媒学院的视觉传达设计研究生文凭（优秀，2018）和平面媒体设计硕士学位（优秀，2020）。
-  <br>
   请联系我以获取完整作品集和相关资料。我目前可以进行远程项目，如您需要雇佣自由职业设计师或有项目合作需求，请通过微信或邮件联系我。
   <br>
   微信账号：norazhaodesign
   <br style="margin-bottom: 0;">
-  电子邮箱：hi@norazhao.com
+  电子邮箱：norazhaodesign@gmail.com
 </p>
 
 <div class="pageDivider"></div>
