--- a/work/glitch-room.html
+++ b/work/glitch-room.html
@@ -18,11 +18,9 @@
 
 <main>
 <p class="en indent headerText">
-  <!-- An interactive VR site that generates customised glitching patterns. -->
   Exploring generative art in virtual reality.
 </p>
 <p class="zh indent headerText">
-  <!-- 可生成自定义故障图样的交互式虚拟现实网站。 -->
   在虚拟现实中探索生成式艺术。
 </p>
 
@@ -104,14 +102,13 @@
   <img src="/img/glitch-room/6.jpg" alt="GLITCH ROOM GENERATED PATTERN 故障房间生成图纹 · NORA ZHAO 赵子娴">
   <img src="/img/glitch-room/7.jpg" alt="GLITCH ROOM GENERATED PATTERN 故障房间生成图纹 · NORA ZHAO 赵子娴">
 </div>
-
 <h6 class="en imgDescription">△ Screenshots of 3D models in VR view.</h6>
 <h6 class="zh imgDescription">△ 三维模型在虚拟现实空间中的截图。</h6>
 
 <div class="grid1">
+  <img src="/img/glitch-room/show4.jpg" alt="GLITCH ROOM 故障房间 · NORA ZHAO 赵子娴">
   <img src="/img/glitch-room/show1.jpg" alt="GLITCH ROOM 故障房间 · NORA ZHAO 赵子娴">
 </div>
-
 <div class="flex flexto1">
   <div style="flex: calc(2890/1810);">
     <img src="/img/glitch-room/show2.jpg" alt="GLITCH ROOM 故障房间 · NORA ZHAO 赵子娴">
@@ -120,6 +117,22 @@
     <img src="/img/glitch-room/show3.jpg" alt="GLITCH ROOM 故障房间 · NORA ZHAO 赵子娴">
   </div>
 </div>
+<h6 class="en imgDescription">△ LCC Postgraduate Shows (2019 | Univerisity of the Arts London, London, UK)</h6>
+<h6 class="zh imgDescription">△ 伦敦传媒学院2019年研究生毕业展（伦敦｜伦敦艺术大学）</h6>
+
+<div class="grid1">
+  <img src="/img/glitch-room/award1.jpg" alt="GLITCH ROOM 故障房间 · NORA ZHAO 赵子娴">
+  <img src="/img/glitch-room/award2.jpg" alt="GLITCH ROOM 故障房间 · NORA ZHAO 赵子娴">
+</div>
+
+<div class="grid2">
+    <img src="/img/glitch-room/award3.jpg" alt="GLITCH ROOM 故障房间 · NORA ZHAO 赵子娴">
+    <img src="/img/glitch-room/award4.jpg" alt="GLITCH ROOM 故障房间 · NORA ZHAO 赵子娴">
+</div>
+
+<h6 class="en imgDescription">△ Facet - Award360° 2021 Exhibition, 100 Designs of the Year (2022 | Pidan by the River Gallery, Shanghai, China)</h6>
+<h6 class="zh imgDescription">△ 截·面 — Award360°2021年度设计100展（上海｜Pidan在河边Gallery)）</h6>
+
 
 <div class="pageDivider"></div>
 
