--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>NORA ZHAO 赵子娴 · ARTIST & DESIGNER 艺术家 & 设计师</title>
+<meta property="og:image" content="https://norazhao.com/img/icon/icon.jpg">
+<meta property="og:title" content="NORA ZHAO">
+<meta property="og:description" content = "生成艺术｜品牌识别｜平面设计">
 
 <meta name="description"
       content="Nora Zhao is an artist and designer practicing across the areas of generative art, brand identity and graphic design. 赵子娴是一名在生成艺术、品牌识别和平面设计等领域进行探索与实践的新媒体艺术家、设计师。">
@@ -101,6 +104,5 @@
     bottom: 0; left: 0; right: 0;
   }
 </style>
-
 </body>
 </html>
