--- a/about-and-contact.html
+++ b/about-and-contact.html
@@ -50,62 +50,59 @@
 
 <h2 class="en indent">Past Awards</h2>
 <p class="en indent bodyText">
-  <a href="/work/synsol.html">Synsol</a>: 
+  <a href="/work/synsol.html">Synsol</a>
   <br class="listBreak">
   D&AD Awards Pencil Winner (Health & Wellbeing Sector, 2022)
   <br class="listBreak">
   (team project, designer)
-  <br class="listBreak">
+  <br>
 
-  <a href="/work/glitch-room.html">Glitch Room</a>:
+  <a href="/work/glitch-room.html">Glitch Room</a>
   <br class="listBreak">
   Award 360° - 100 Design of the Year (Creative Multimedia Design of the Year, 2021)
   <br class="listBreak">
   (independent project, designer/coder/writer)
-  <br class="listBreak">
+  <br>
 
-  <a href="/work/omdia.html">Omdia (Informa Tech)</a>: 
+  <a href="/work/omdia.html">Omdia (Informa Tech)</a>
   <br class="listBreak">
   Transform Awards (Best Corporate Re-Brand following a Merger or Acquisition, 2021)
   <br class="listBreak">
   (team project, designer)
-  <br class="listBreak">
+  <br>
 </p>
 
 <h2 class="zh indent">奖项</h2>
 <p class="zh indent bodyText">
   <a href="/work/synsol.html">Synsol</a>：
-  <br class="listBreak">
   D&AD木铅笔奖（伦敦｜2022年）（团队项目｜设计师）
   <br class="listBreak">
 
   <a href="/work/glitch-room.html">故障房间</a>：
-  <br class="listBreak">
   Award360°年度设计100（年度多媒体创意设计｜2021年） （个人项目）
   <br class="listBreak">
 
   <a href="/work/omdia.html">Omdia (Informa Tech)</a>：
-  <br class="listBreak">
   TRANSFORM AWARDS 金奖 （伦敦｜2021年）（团队项目｜设计师）
 </p>
 
 <h2 class="en indent">Exhibitions</h2>
 <p class="en indent bodyText">
-  <a href="/work/glitch-room.html">Glitch Room</a>: 
+  <a href="/work/glitch-room.html">Glitch Room</a>
   <br class="listBreak">
   Facet - Award360° 2021 Exhibition, 100 Designs of the Year
   <br class="listBreak">
   2022 | Pidan by the River Gallery, Shanghai, China
-  <br class="listBreak">
+  <br>
 
-  <a href="/work/glitch-room.html">Glitch Room</a>:
+  <a href="/work/glitch-room.html">Glitch Room</a>
   <br class="listBreak">
   LCC Postgraduate Shows
   <br class="listBreak">
   2019 | London College of Communication, Univerisity of the Arts London, London, UK
-  <br class="listBreak">
+  <br>
 
-  <a href="/work/chinese-grid.html">Chinese Grid</a>:
+  <a href="/work/chinese-grid.html">Chinese Grid</a>
   <br class="listBreak">
   LCC Postgraduate Shows
   <br class="listBreak">
@@ -115,16 +112,15 @@
 <h2 class="zh indent">展览</h2>
 <p class="zh indent bodyText">
   <a href="/work/glitch-room.html">故障房间</a>：
-  <br class="listBreak">
   截·面 — Award360°2021年度设计100展（上海｜Pidan在河边Gallery)
   <br class="listBreak">
+
   <a href="/work/glitch-room.html">故障房间</a>：
+  伦敦传媒学院 2019年研究生毕业展（伦敦｜伦敦艺术大学）
   <br class="listBreak">
-  伦敦传媒学院2019年研究生毕业展（伦敦｜伦敦艺术大学）
-  <br class="listBreak">
+
   <a href="/work/chinese-grid.html">中文字形网格</a>：
-  <br class="listBreak">
-  伦敦传媒学院2018年研究生毕业展（伦敦｜伦敦艺术大学）
+  伦敦传媒学院 2018年研究生毕业展（伦敦｜伦敦艺术大学）
 </p>
 
 <h2 class="en indent">Contact Info</h2>
