--- a/work/omdia.html
+++ b/work/omdia.html
@@ -39,7 +39,7 @@
   <br class="listBreak">
   Scope: consumer research, brand strategy, naming, visual identity system, brand guidelines
   <br class="listBreak">
-  Year: 2019-2020
+  Year: 2021
   <br class="listBreak">
   Type: team project
   <br class="listBreak">
