--- a/work/angel-water.html
+++ b/work/angel-water.html
@@ -86,14 +86,14 @@
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
-  <a href="/work/lazzen.html">
+  <a href="/work/synsol.html">
     <p class="en nextText">Next Project</p>
     <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("/work/lazzen.html main");
+      $("#nextPage").load("/work/synsol.html main");
     });
   </script>
 </div>
