--- a/work/synsol.html
+++ b/work/synsol.html
@@ -61,7 +61,7 @@
   <br class="listBreak">
   地点：北京
   <br class="listBreak">
-  范畴：品牌策略、命名、视觉识别系统、品牌指导手册、门店概念
+  范畴：品牌策略、命名、视觉识别系统、门店概念
   <br class="listBreak">
   时间：2021年
   <br class="listBreak">
