--- a/about-and-contact.html
+++ b/about-and-contact.html
@@ -75,14 +75,17 @@
 <h2 class="zh indent">奖项</h2>
 <p class="zh indent bodyText">
   <a href="/work/synsol.html">Synsol</a>：
-  D&AD木铅笔奖（伦敦｜2022年）（团队项目｜设计师）
   <br class="listBreak">
+  D&AD木铅笔奖（伦敦｜2022年）（团队项目｜设计师）
+  <br>
 
   <a href="/work/glitch-room.html">故障房间</a>：
-  Award360°年度设计100（年度多媒体创意设计｜2021年） （个人项目）
   <br class="listBreak">
+  Award360°年度设计100（年度多媒体创意设计｜2021年） （个人项目）
+  <br>
 
   <a href="/work/omdia.html">Omdia (Informa Tech)</a>：
+  <br class="listBreak">
   TRANSFORM AWARDS 金奖 （伦敦｜2021年）（团队项目｜设计师）
 </p>
 
@@ -112,14 +115,17 @@
 <h2 class="zh indent">展览</h2>
 <p class="zh indent bodyText">
   <a href="/work/glitch-room.html">故障房间</a>：
-  截·面 — Award360°2021年度设计100展（上海｜Pidan在河边Gallery)
   <br class="listBreak">
+  截·面 — Award360°2021年度设计100展（上海｜Pidan在河边Gallery)
+  <br>
 
   <a href="/work/glitch-room.html">故障房间</a>：
-  伦敦传媒学院 2019年研究生毕业展（伦敦｜伦敦艺术大学）
   <br class="listBreak">
+  伦敦传媒学院 2019年研究生毕业展（伦敦｜伦敦艺术大学）
+  <br>
 
   <a href="/work/chinese-grid.html">中文字形网格</a>：
+  <br class="listBreak">
   伦敦传媒学院 2018年研究生毕业展（伦敦｜伦敦艺术大学）
 </p>
 
