--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
     "/page/gradient-arc.html",
     "/page/sound-sensor.html",
     "/page/pixels.html",
-      // "/page/led-light.html",
+    "/page/stripes.html",
+    // "/page/led-light.html",
   ];
   var randomUrl = myArray[Math.floor(Math.random() * myArray.length)];
   document.getElementById('display').src = randomUrl;
