--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
     "/page/sound-sensor.html",
     "/page/pixels.html",
     "/page/stripes.html",
+    "/page/horizon.html",
+    "/page/polygons.html",
     // "/page/led-light.html",
   ];
   var randomUrl = myArray[Math.floor(Math.random() * myArray.length)];
