cancel index page footer

--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
   };
 </script>
 
-<div id="footer"></div>
+<!-- <div id="footer"></div>
 <script type="text/javascript">
   $(function() {
     $("#footer").load("/footer.html");
   });
-</script>
+</script> -->
 
 <style media="screen">
   footer {
