--- a/footer.html
+++ b/footer.html
@@ -1,12 +1,12 @@
 <footer>
   <p class="en footer">
-    © 2021 Nora Zhao, All Rights Reserved. 
+    © 2021 Nora Zhao, All Rights Reserved.
     <a href="https://www.instagram.com/norazhaodesign/" target="_blank">Ins</a> |
     <a href="/about-and-contact.html" target="_blank">Contact</a>
   </p>
   <p class="zh footer">
-    © 2022 赵子娴 版权所有 
-    <a id="icp" href="http://beian.miit.gov.cn/" target="_blank">黔ICP备2022005084号</a>
+    © 2022 赵子娴 版权所有
+    <!-- <a id="icp" href="http://beian.miit.gov.cn/" target="_blank">黔ICP备2022005084号</a> -->
     <!-- <a href="https://www.instagram.com/norazhaodesign/" target="_blank">Ins</a>｜<a href="/about-and-contact.html" target="_blank">联系方式</a> -->
   </p>
 </footer>
